Changes that don't exist in the official wxWidgets

- disabled wxPen
  - include/wx/pen.h
              /peninfobase.h
              /gdicmn.h
              /dc.h
              /msw/dc.h
              /generic/splitter.h
  - src/common/gdicmn.cpp
              /dcbase.cpp
       /generic/tipwin.cpp
       /msw/renderer.cpp
           /dc.cpp
           /dcmemory.cpp
           /pen.cpp

- disabled unused rendering functions for msw port
  - src/msw/renderer.cpp

- disabled some DC related functions
  - include/wx/dc.h
              /msw/dc.h
  - src/common/dcbase.cpp
       /msw/dc.cpp

- disabled generic renderer
  - include/wx/renderer.h
  - src/generic/renderg.cpp

- removed color database
  - include/wx/gdicmn.h
  - src/common/gdicmn.cpp
              /appcmn.cpp
              /colourcmn.cpp

- fix compilation error for wxUSE_TIMER
  - include/wx/private/timer.h
              /osx/core/private/timer.h
  - src/osx/cocoa/utils.mm

- allow to disable combobox and radiobtn on macOS
  - include/wx/osx/cocoa/private.h
  - src/osx/cocoa/window.mm
                 /nonownedwnd.mm

- disabled debug related functions for wxApp
  - include/wx/app.h
              /build.h
              /gtk/app.h
  - src/common/appbase.cpp
       /gtk/app.cpp

- disabled some macros for RTTI system
  - include/wx/rtti.h

- disabled some cursor icons
  - include/wx/gdicmn.h
  - src/common/gdicmn.cpp
    src/msw/cursor.cpp
    src/osx/carbon/utilscocoa.mm

- disabled wxGetLibraryVersionInfo
  - include/wx/utils.h
  - src/common/utilscmn.cpp
              /wincmn.cpp

- disabled scroll window and show effect with wxUSE_WINDOW_MINIMAL
  - include/wx/window.h
              /scrolwin.h
              /dialog.h
              /vscroll.h
              /vlbox.h
              /msw/window.h
              /osx/window.h
                  /nonownedwnd.h
                  /cocoa/private.h
                  /core/private.h
  - src/generic/scrlwing.cpp
               /vscroll.cpp
               /vlbox.cpp